// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar (snapshot) > matches snapshot with logoSrc 1`] = `
<div>
  <nav
    class="z-50 border-b border-border bg-background/80 backdrop-blur sticky top-0"
  >
    <div
      class="mx-auto flex h-14 max-w-6xl items-center justify-between px-4 sm:px-6"
    >
      <div
        class="shrink-0"
      >
        <a
          class="flex items-center gap-2.5 no-underline"
          href="/"
        >
          <img
            alt=""
            aria-hidden="true"
            class="h-8 w-auto"
            height="32"
            src="/logo.png"
            width="32"
          />
          <span
            class="flex flex-col leading-tight"
          >
            <span
              class="text-[15px] font-semibold tracking-tight text-foreground"
            >
              Olympus
            </span>
            <span
              class="font-mono text-[10px] text-muted-foreground"
            >
              free identity solution
            </span>
          </span>
        </a>
      </div>
      <div
        class="hidden items-center gap-6 md:flex"
      >
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#features"
        >
          Features
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#architecture"
        >
          Architecture
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#playground"
        >
          Playground
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="/docs"
        >
          Docs
        </a>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Switch to dark theme"
            class="inline-flex h-8 w-8 items-center justify-center rounded-full border border-border bg-muted text-foreground transition-colors hover:bg-accent"
            title="Switch to dark theme"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-moon h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
              />
            </svg>
          </button>
          <a
            class="flex items-center gap-1.5 rounded-full border border-border bg-muted px-3 py-1 text-sm font-medium text-foreground no-underline transition-colors hover:bg-accent"
            href="https://github.com/orgs/OlympusOSS/repositories"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-github h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
              />
              <path
                d="M9 18c-4.51 2-5-2-7-2"
              />
            </svg>
            GitHub
          </a>
        </div>
      </div>
      <button
        aria-label="Open menu"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 w-9 md:hidden"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 5h16"
          />
          <path
            d="M4 12h16"
          />
          <path
            d="M4 19h16"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`NavBar (snapshot) > matches snapshot without logoSrc 1`] = `
<div>
  <nav
    class="z-50 border-b border-border bg-background/80 backdrop-blur sticky top-0"
  >
    <div
      class="mx-auto flex h-14 max-w-6xl items-center justify-between px-4 sm:px-6"
    >
      <div
        class="shrink-0"
      >
        <a
          class="flex items-center gap-2.5 no-underline"
          href="/"
        >
          <svg
            viewBox="0 0 440 736"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <lineargradient
                id="_r_2_"
                x1="1"
                x2="0"
                y1="1"
                y2="0"
              >
                <stop
                  offset="0%"
                  stop-color="#1E40AF"
                />
                <stop
                  offset="100%"
                  stop-color="#60A5FA"
                />
              </lineargradient>
            </defs>
            <g
              transform="translate(220, 368) rotate(90) translate(-700, -510)"
            >
              <path
                d="M 552 300 H 848 A 210 210 0 0 1 1058 510 A 210 210 0 0 1 848 720 H 552 A 210 210 0 0 1 342 510 A 210 210 0 0 1 552 300 Z M 582 386 H 818 A 124 124 0 0 1 942 510 A 124 124 0 0 1 818 634 H 582 A 124 124 0 0 1 458 510 A 124 124 0 0 1 582 386 Z"
                fill="url(#_r_2_)"
                fill-rule="evenodd"
              />
            </g>
          </svg>
          <span
            class="flex flex-col leading-tight"
          >
            <span
              class="text-[15px] font-semibold tracking-tight text-foreground"
            >
              Olympus
            </span>
            <span
              class="font-mono text-[10px] text-muted-foreground"
            >
              free identity solution
            </span>
          </span>
        </a>
      </div>
      <div
        class="hidden items-center gap-6 md:flex"
      >
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#features"
        >
          Features
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#architecture"
        >
          Architecture
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="#playground"
        >
          Playground
        </a>
        <a
          class="text-sm font-medium text-muted-foreground no-underline transition-colors hover:text-brand"
          href="/docs"
        >
          Docs
        </a>
        <div
          class="flex items-center gap-2"
        >
          <button
            aria-label="Switch to dark theme"
            class="inline-flex h-8 w-8 items-center justify-center rounded-full border border-border bg-muted text-foreground transition-colors hover:bg-accent"
            title="Switch to dark theme"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-moon h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
              />
            </svg>
          </button>
          <a
            class="flex items-center gap-1.5 rounded-full border border-border bg-muted px-3 py-1 text-sm font-medium text-foreground no-underline transition-colors hover:bg-accent"
            href="https://github.com/orgs/OlympusOSS/repositories"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-github h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
              />
              <path
                d="M9 18c-4.51 2-5-2-7-2"
              />
            </svg>
            GitHub
          </a>
        </div>
      </div>
      <button
        aria-label="Open menu"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 w-9 md:hidden"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 5h16"
          />
          <path
            d="M4 12h16"
          />
          <path
            d="M4 19h16"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;
